[package]
name = "mqtterminal-client"
version = "0.1.0"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
edition = "2018"
description = "Client side for MQTTerminal project - Run shell commands asynchronously over MQTT with very low setup"
homepage = "https://github.com/gabriel-milan/mqtterminal-client"
repository = "https://github.com/gabriel-milan/mqtterminal-client"
license="GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9"
clap = "2.33"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
openssl = "0.10"

[[bin]]
name = "mqttterminal-client"
path = "src/main.rs"

[features]
vendored-openssl = ["openssl/vendored"]
